# tianjiewong-portfolio

./: .dockerignore  .env.sample  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose-sample.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  tsconfig.json
.github/workflows/: development.yml  push-pr-jest-tests.yml  push-pr-lint.yml
app/: jest.config.ts  package-lock.json  package.json  tailwind.config.ts
app/src/: App.tsx
app/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/src/app/__tests__/: page.test.tsx
app/src/components/: DarkModeIcon.tsx  Header.tsx  LightModeIcon.tsx  ThemeToggleButton.tsx
apps/docker/nginx/: nginx.conf
apps/docker/web/: Dockerfile
apps/docker/www/: Dockerfile
apps/scripts/: createsuperuser.sh  entrypoint.sh
apps/web/: .env-sample  requirements.txt
apps/web/backend/: settings.py
apps/web/custom_commands/management/commands/: superuser.py
apps/web/portfolio/: admin.py  api_views.py  models.py  serializers.py  urls.py  views.py
apps/web/portfolio/migrations/: 0001_initial.py
apps/web/portfolio/templates/: authorised.html  index.html  skill_detail.html  skills.html
apps/web/scripts/: collectstatic.sh  entrypoint.sh
apps/www/: package-lock.json  package.json  server.js
apps/www/constants/: index.js
docker/app/: Dockerfile
docker/server/: Dockerfile
src/: server.ts
